<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe5fd"
    android:orientation="horizontal"
    tools:context=".AddPlayer">

    <TextView
        android:id="@+id/playerNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="125dp"
        android:fontFamily="monospace"
        android:text="@string/setupTitle"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/label1"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/enter1"
        app:layout_constraintEnd_toEndOf="@+id/enter1"
        app:layout_constraintStart_toStartOf="@+id/enter1" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/label2"
        android:textColor="#2196F3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/enter2"
        app:layout_constraintEnd_toEndOf="@+id/enter2"
        app:layout_constraintStart_toStartOf="@+id/enter2" />

    <EditText
        android:id="@+id/enter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <EditText
        android:id="@+id/enter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/playerName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <Button
        android:id="@+id/pvpBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/a_button"
        android:orientation="vertical"
        android:text="@string/confirmBtn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#9C27B0"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />
</androidx.constraintlayout.widget.ConstraintLayout>