<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe5fd"
    android:orientation="horizontal"
    tools:context=".ChooseMode">

        <Button
            android:id="@+id/pvcBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/a_button"
            android:orientation="vertical"
            android:text="@string/pvcBtn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#9C27B0"
            app:iconPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.677" />

        <Button
            android:id="@+id/pvpBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/a_button"
            android:orientation="vertical"
            android:text="@string/pvpBtn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#9C27B0"
            app:iconPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/gameModeTitle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/gameModeTitle"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.215" />
</androidx.constraintlayout.widget.ConstraintLayout>