<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameAction">

    <Button
        android:id="@+id/restart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/a_button"
        android:text="@string/restart"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/mainMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/a_button"
        android:text="@string/mainMenu"
        android:textColor="#EDEDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        android:gravity="center"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/customMessage"
            android:layout_width="377dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/customMessage"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/winnerText"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FFFFFF"
                android:onClick="clickGameBoard"
                android:textColor="#000000"
                android:textSize="60dp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

